adding collect back, remove mask

--- a/web-app/client/index.html
+++ b/web-app/client/index.html
@@ -101,6 +101,9 @@
           <br />
           Application
         </a></li>
+        <li><a class="nav-link nav-streams" id="nav-collect" href="#/streams">
+          <span class="left-nav-icon"></span>
+          Collect</a></li>
         <li><a class="nav-link nav-flows" id="nav-process" href="#/flows">
           <img class="left-nav-icon" src="/assets/img/v2/process_icon.png" />
           <br />
