My account link now displays dropdown menu on hover; cursor is set to pointer

--- a/web-app/client/index.html
+++ b/web-app/client/index.html
@@ -71,7 +71,7 @@
             {{#unless C.isEnterprise}}
             <a href="javascript:void(0)" data-uv-lightbox="classic_widget" data-uv-mode="full" data-uv-primary-color="#cc6d00" data-uv-link-color="#007dbf" data-uv-default-mode="support" data-uv-forum-id="194926" class="support-link">Support</a>
             {{/unless}}
-            <div class="pull-right user-link small-pad" style="position: relative; width: 140px;text-align: center;">
+            <div class="pull-right user-link my-account small-pad" style="position: relative; width: 140px;text-align: center;">
               <div class="dropdown" data-toggle="dropdown">
                 <div class="text-span">  <img id="loading-time-select-img" src="/assets/img/start-all-load.gif" />My account</div>
               </div>
