--- a/web-app/client/index.html
+++ b/web-app/client/index.html
@@ -313,6 +313,7 @@
  </div>
 --}}
 
+    <div>Number of Queries: {{numQueries}}</div>
     <table class="table">
       <thead>
         <th>Query Handle</th>
@@ -327,12 +328,16 @@
         {{#unless deleted}}
 
         <tr data-toggle="collapse" {{bindAttr data-target="query_handle_hashed"}} class="accordion-toggle">
-          <td>{{query_handle}}</td>
+          <td>
+            {{query_handle}}
+            <span {{action cancelQuery this bubbles=false}}>cancel</span>
+            <span {{action deleteQuery this bubbles=false}}>delete</span>
+            <span {{action getResults this bubbles=false}}>results</span>
+          </td>
           <td>{{statement}}</td>
           <td>{{status}}</td>
           {{#if has_results}}
             <td>
-                <a download="hello.txt" href="data:text/plain;charset=UTF-8,Hello, File!"></a>
                 <a {{bindAttr download=downloadName}} {{bindAttr href="downloadableResults"}}>
                   Download Results
                 </a>
@@ -344,17 +349,36 @@
 
         {{#if has_results}}
           <tr>
-            <td class="hiddenRow" style="padding: 0 !important;">
+            <td class="hiddenRow" style="padding:0;">
               <div {{bindAttr id="query_handle"}} class="accordion-body collapse">
-                {{results}}
+
+                <table>
+                  <thead>
+                    {{#each schema}}
+                      <th>{{name}}</th>
+                    {{/each}}
+                  </thead>
+                  <tbody>
+                  {{#each results}}
+                    <tr>
+                    {{#each columns}}
+                      <td>{{this}}</td>
+                    {{/each}}
+                    </tr>
+                  {{/each}}
+                  </tbody>
+                </table>
+
               </div>
             </td>
           </tr>
         {{ else }}
-          <tr id="showHide">
-          <td colspan="4" style="text-align:center;">
-            <a>This query does not (yet) have results.</a>
-          </td>
+          <tr>
+            <td class="hiddenRow" colspan="4" style="text-align:center;padding:0;">
+            <div {{bindAttr id="query_handle"}} class="accordion-body collapse">
+              <a>This query does not have results.</a>
+            </div>
+            </td>
           </tr>
         {{/if}}
 
@@ -368,51 +392,96 @@
 
 
   <script type="text/x-handlebars" data-template-name="DataExploreQuery">
+
+    {{#if datasets}}
       <table class="table">
         <thead>
           <th>Dataset</th>
-          <th>Hive Table: continuuity.user.history</th>
+          <th>Hive Table: {{selectedDataset.name}}</th>
         </thead>
         <tbody>
+
+
           <tr>
-            <td style="max-width: 350px;" class="app-list-name service-col">
-              <a class="none-text-decoration">Name</a>
-              <br />
-              <span class="app-list-status">description</span>
+            <td width="25%">topmost</td>
+            <td width="75%" rowspan=100%>
+              <table width="100%">
+                  <thead>
+                    {{#each selectedDataset.schema}}
+                      <th>{{name}}</th>
+                    {{/each}}
+                  </thead>
+                  <tbody>
+                  {{#each selectedDataset.results}}
+                    <tr>
+                    {{#each columns}}
+                      <td>{{this}}</td>
+                    {{/each}}
+                    </tr>
+                  {{/each}}
+                  </tbody>
+              </table>
             </td>
           </tr>
-          <tr>
+
+
+
+          {{#each datasets}}
+          <tr {{action selectDataset this}}>
             <td style="max-width: 350px;" class="app-list-name service-col">
-              <a class="none-text-decoration">Name</a>
+              <a class="none-text-decoration">{{shortName}}</a>
               <br />
-              <span class="app-list-status">description</span>
+              <span class="app-list-status">{{name}}</span>
             </td>
           </tr>
+          {{/each}}
         </tbody>
       </table>
 
+  {{ else }}
+    <div class="object-list-empty" style="height:500px;padding-top:20px;">
+        <div class="object-list-empty-content">
+          <div>No discoverable dataset.</div>
+          <span>Please add a discoverable dataset before using this feature.</span>
+        </div>
+      </div>
+  {{/if}}
+
+{{!--
       <table class="table">
         <tbody>
-          {{!-- Information about the table will go here (schema) --}}
+          Information about the table will go here (schema)
         </tbody>
       </table>
+  --}}
   </script>
 
   <script type="text/x-handlebars" data-template-name="DataExplore">
+    <div id="title">
+      <h1>EXPLORE</h1>
+    </div>
     <div id="panels">
       <div class="panel">
+
+
+
         <ul class="nav nav-pills pull-right" style="margin: 2px 14px;">
           <li>{{#linkTo DataExplore.Query}}Query{{/linkTo }}</li>
           <li>{{#linkTo DataExplore.Results}}Reults{{/linkTo}}</li>
         </ul>
 
-        <h1><span>Data</span> Explore</h1>
+        {{!-- todo: remove this
+          <h1><span>Data</span> Explore</h1>
+          --}}
         <td>
           {{view C.Embed.Injector valueBinding="controllers.SQLQueryString"}}
-          <button class="btn btn-blank btn-default" {{action 'submitSQLQuery' on="click"}}>Submit</button>
+          <button class="btn btn-blank btn-default" {{action 'submitSQLQuery' on="click"}}>Execute</button>
         </td>
 
         {{outlet}}
+
+
+
       </div>
     </div>
   </script>
