--- a/web-app/client/index.html
+++ b/web-app/client/index.html
@@ -247,72 +247,6 @@
   </script>
 
   <script type="text/x-handlebars" data-template-name="DataExploreResults">
-{{!--
-<div class="panel-group" id="accordion">
-   <div class=" panel-primary">
-
-        <div class="panel-heading">
-            <h4 class="panel-title">
-            <a data-toggle="collapse" data-parent="#accordion" href="#accordionOne">
-              Collapsible Accordion 1
-            </a>
-           </h4>
-        </div>
-
-        <div id="accordionOne" class="panel-collapse collapse in">
-          <div class="panel-body">
-           Lorem ipsum dolor sit amet, consectetur adipisicing elit,
-            sed do eiusmod tempor incididunt ut labore et dolore magna
-            aliqua. Ut enim ad minim veniam, quis nostrud exercitation
-            ullamco laboris nisi ut aliquip ex ea commodo consequat
-          </div>
-        </div>
-  </div>
-
-   <div class=" panel-success">
-
-          <div class="panel-heading">
-          <h4 class="panel-title">
-            <a data-toggle="collapse" data-parent="#accordion" href="#accordionTwo">
-              Collapsible Accordion 2
-            </a>
-          </h4>
-          </div>
-
-        <div id="accordionTwo" class="panel-collapse collapse">
-          <div class="panel-body">
-            Change does not roll in on the wheels of inevitability,
-            but comes through continuous struggle.
-            And so we must straighten our backs and work for
-            our freedom. A man can't ride you unless your back is bent.
-          </div>
-        </div>
-
-   </div>
-
-    <div class="panel panel-warning">
-
-        <div class="panel-heading">
-          <h4 class="panel-title">
-            <a data-toggle="collapse" data-parent="#accordion" href="#accordionThree">
-              Collapsible Accordion 3
-            </a>
-          </h4>
-        </div>
-
-        <div id="accordionThree" class="panel-collapse collapse">
-          <div class="panel-body">
-          You must take personal responsibility.
-            You cannot change the circumstances,
-            the seasons, or the wind, but you can change yourself.
-            That is something you have charge of.
-        </div>
-
-     </div>
-
- </div>
---}}
-
     <div>Number of Queries: {{numQueries}}</div>
     <table class="table">
       <thead>
@@ -392,51 +326,51 @@
 
 
   <script type="text/x-handlebars" data-template-name="DataExploreQuery">
-
+    <div style="clear:both"></div>
     {{#if datasets}}
-      <table class="table">
+      <table class="table bordered-dataset-table">
         <thead>
-          <th>Dataset</th>
+          <th style="width: 350px">Dataset</th>
           <th>Hive Table: {{selectedDataset.name}}</th>
         </thead>
-        <tbody>
-
-
-          <tr>
-            <td width="25%">topmost</td>
-            <td width="75%" rowspan=100%>
-              <table width="100%">
-                  <thead>
-                    {{#each selectedDataset.schema}}
-                      <th>{{name}}</th>
-                    {{/each}}
-                  </thead>
-                  <tbody>
-                  {{#each selectedDataset.results}}
-                    <tr>
-                    {{#each columns}}
-                      <td>{{this}}</td>
-                    {{/each}}
-                    </tr>
-                  {{/each}}
-                  </tbody>
-              </table>
-            </td>
-          </tr>
-
-
-
-          {{#each datasets}}
-          <tr {{action selectDataset this}}>
-            <td style="max-width: 350px;" class="app-list-name service-col">
-              <a class="none-text-decoration">{{shortName}}</a>
-              <br />
-              <span class="app-list-status">{{name}}</span>
-            </td>
-          </tr>
-          {{/each}}
-        </tbody>
       </table>
+      <div id="query-display">        
+        <div class="left-float" id="query-tables">
+          <table class="table">
+            {{#each datasets}}
+            <tr {{action selectDataset this}} {{ bindAttr class=":cursor-pointer :table-name this.isSelected:selected:notselected" }} >
+              <td style="max-width: 350px; border-bottom: 0" class="app-list-name service-col">
+                <a class="none-text-decoration">{{shortName}}</a>
+                <br />
+                <span class="app-list-status">{{name}}</span>
+                {{#if this.isSelected}}
+                  <div class="arrow-right"></div>
+                {{/if}}
+              </td>
+            </tr>
+            {{/each}}
+          </table>
+        </div>
+        <div id="query-schema">
+          <table class="table" id="schema-table">
+              <thead>
+                {{#each selectedDataset.schema}}
+                  <th>{{name}}</th>
+                {{/each}}
+              </thead>
+              <tbody>
+              {{#each selectedDataset.results}}
+                <tr>
+                {{#each columns}}
+                  <td>{{this}}</td>
+                {{/each}}
+                </tr>
+              {{/each}}
+              </tbody>
+            </table>
+        </div>
+        <div style="clear:both"></div>
+      </div>
 
   {{ else }}
     <div class="object-list-empty" style="height:500px;padding-top:20px;">
@@ -446,36 +380,21 @@
         </div>
       </div>
   {{/if}}
-
-{{!--
-      <table class="table">
-        <tbody>
-          Information about the table will go here (schema)
-        </tbody>
-      </table>
-  --}}
   </script>
 
   <script type="text/x-handlebars" data-template-name="DataExplore">
     <div id="title">
-      <h1>EXPLORE</h1>
+      <ul class="nav nav-pills pull-right" style="margin: 2px 14px;">
+        <li>{{#linkTo DataExplore.Query}}Query{{/linkTo }}</li>
+        <li>{{#linkTo DataExplore.Results}}Reults{{/linkTo}}</li>
+      </ul>
+      <h1>Explore</h1>
     </div>
     <div id="panels">
       <div class="panel">
-
-
-
-        <ul class="nav nav-pills pull-right" style="margin: 2px 14px;">
-          <li>{{#linkTo DataExplore.Query}}Query{{/linkTo }}</li>
-          <li>{{#linkTo DataExplore.Results}}Reults{{/linkTo}}</li>
-        </ul>
-
-        {{!-- todo: remove this
-          <h1><span>Data</span> Explore</h1>
-          --}}
         <td>
           {{view C.Embed.Injector valueBinding="controllers.SQLQueryString"}}
-          <button class="btn btn-blank btn-default" {{action 'submitSQLQuery' on="click"}}>Execute</button>
+          <button class="btn btn-blank btn-default" id="execute-explore-query" {{action 'submitSQLQuery' on="click"}}>Execute</button>
         </td>
 
         {{outlet}}
@@ -1702,6 +1621,22 @@
   <script type="text/x-handlebars" data-template-name="list-page">
     <div id="title">
       {{view C.Embed.TimeSelector}}
+      <h1><span>Data</span> {{controller.title}}</h1>
+    </div>
+
+    <div id="panels">
+      <div class="panel">
+        {{outlet}}
+      </div>
+    </div>
+  </script>
+
+<script type="text/x-handlebars" data-template-name="datasets-list-page">
+    <div id="title">
+      {{view C.Embed.TimeSelector}}
+      <div class="pull-right">
+        <a class="btn-custom" id="explore-button" href="/#/dataexplore/query">Explore</a>
+      </div>
       <h1><span>Data</span> {{controller.title}}</h1>
     </div>
 
