Remove ability to change Userservice's runnables' instances requested attribute when the corresponding Userservice is not running. Reasoning: When the Userservice is off and the runnable instances requested attribute is changed, the endpoint correctly changes the attribute, but returns an Internal Server Error (500).

--- a/web-app/client/index.html
+++ b/web-app/client/index.html
@@ -296,6 +296,7 @@
               <td style="max-width: 200px;" class="instance-col">
                 <div class="instance-wrapper">
                   <div class="instance-num left-float"><span>{{runnable.requested}}</span></div>
+                  {{#if model.isRunning}}
                   <div>
                     <a class="cursor-pointer" {{action runnableDecreaseInstance model runnable.id runnable.requested }}>
                       <span class="minus-icon"></span>
@@ -304,6 +305,7 @@
                       <span class="plus-icon"></span>
                     </a>
                   </div>
+                  {{/if}}
                 </div>
               <td class="instance-provisioned service-col">
                   <div class="instance-num auto-margin"><span>{{runnable.provisioned}}</span></div>
