Center name on userservice page

--- a/web-app/client/index.html
+++ b/web-app/client/index.html
@@ -258,7 +258,7 @@
 {{#if model}}
     <div id="info">
       <div class="info-box">
-        <div class="flow-schedule">
+        <div class="flow-state">
             <strong>{{model.name}}</strong>
         </div>
       </div>
